# cartola_project

./: .gitignore  404.html  MANIFEST.in  README.md  api.py  cartola.py  cartola_abc.py  cartola_refactory.py  index.html  insert_data.py  main.py  mkdocs.yaml  mkdocs.yml  objects.inv  pyproject.toml  requester.py  requirements-docs.txt  requirements.txt  setup.py  teste_temp.py  transformations.py  util.py  writer.py
.github/workflows/: main.yml
Examples/Api/: index.html
Examples/Json/: index.html
Examples/Parquet/: index.html
api/: index.html
api/api/: index.html
cartola/: api.py  athena.py  config.py  ingestor.py  reader.py  transformations.py  writer.py
cartola/models/: __init__.py  file.py
cartola/transformations/: transformations.py
cartola_project/: VERSION.txt  __init__.py  api.py  connector.py  reader.py  storage.py  writer.py
cartola_project/models/: __init__.py  bucket.py  file.py  match.py  player.py  statistic.py  storagefolder.py  team.py  testes.py
cartola_project/reader/: __init__.py  factory.py  reader.py
cartola_project/storage/: __init__.py  factory.py  storage.py
cartola_project/transformations/: __init__.py  fixtures.py  helpers.py  match.py  player.py  statistics.py  teams.py  teste.py  transformations.py  util.py
cartola_project/writer/: __init__.py  factory.py  writer.py
database/: athena.py  ddl_cartola_silver.sql
docs/: README.md  api.md  index.md  reader.md  storage.md  writer.md
docs/api/: api.md
docs/tansformations/: helper.md  transfomation.md
docs/templates/: install.md
get_data/: match.py  obt.py  process.py  statistic.py  team.py  util.py
get_data/config/: match.py  obt.py  player.py  statistic.py  team.py
get_data/conts/: project_id.py
get_data/enum/: __init__.py
get_data/export/: __init__.py  export.py  matches.py  obt.py  players.py  statistics.py  team.py
get_data/models/: match.py  obt.py  statistic.py  team.py
models/: bucket.py  storage.py
partida/: 2022.json
reader/: index.html
search/: search_index.json
storage/: index.html
tansformations/helper/: index.html
tansformations/transfomation/: index.html
team/: 2022.json
utils/: export.py  export_bronze.py  export_obt.py  export_silver.py  process.py  util.py
writer/: index.html
