[project]
name = 'cartola_project'
description = ""
authors = [
    { name = 'Gabriel Mizuno', email = 'gabrielmizuno@gmail.com' },
]
requires-python = ">=3.8"
license = { text = "MIT" }
dynamic = ["version", "readme", "dependencies"]

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ['cartola_project']

[tool.setuptools_scm]
write_to = "cartola_project/VERSION.txt"

[tool.setuptools.dynamic]
readme = { file = ["docs/README.md"] }
dependencies = { file = "requirements.txt" }

[tool.black]
color = true
line-length = 80
target-version = ['py310']
skip-string-normalization = true

[tool.isort]
line_length = 100
known_first_party = 'cartola_project'
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
