[project]
name = 'cartola_project'
description = ""
authors = [
    { name = 'Gabriel Mizuno', email = 'gabrielmizuno@gmail.com' },
]
requires-python = ">=3.8"
license = { text = "MIT" }
dynamic = ["version", "readme", "dependencies"]

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ['cartola_project']

[tool.setuptools_scm]
write_to = "cartola_project/VERSION.txt"

[tool.setuptools.dynamic]
readme = { file = ["docs/README.md"] }
dependencies = { file = "requirements.txt" }

[tool.taskipy.tasks]
lint_check = "black --check --diff . && isort --check --diff . && ruff ."
lint = "black . && isort  . && ruff --fix ."
black = "black --check --diff ."
isort = "isort --check --diff ."
ruff = "ruff ."
docs = "mkdocs serve"
pre_test = "task lint"

[tool.black]
color = true
line-length = 100
target-version = ['py310']
skip-string-normalization = true

[tool.isort]
line_length = 100
known_first_party = 'cartola_project'
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true

[tool.ruff]
line-length = 100
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "docs"
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

